infra/ingress-protected.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-metod: POST
    nginx.ingress.kubernetes.io/auth-url: http://ms-auth-loadbalancer.default.svc.cluster.local/auth/token/access
    nginx.ingress.kubernetes.io/auth-response-headers: User-Id
  name: ingress-protected
spec:
  rules:
    - host: xazar.local
      http:
        paths:
          - path: /dayoff
            pathType: Prefix
            backend:
              service:
                name: ms-dayoff-loadbalancer
                port:
                  number: 80
